--- a/device_select.html
+++ b/device_select.html
@@ -51,7 +51,7 @@
 <br>
 <br>
 <br>
-<center><img src="logo_Black.png" alt="Логотип" width="123" height="123"></center> <!--было https://i.imgur.com/HIS7ACg.png-->
+<center><img src="img/logo_Black.png" alt="Логотип" width="123" height="123"></center> <!--было https://i.imgur.com/HIS7ACg.png-->
 <h1 align=center><font face=calibri>Select Device - помощник в выборе компьютерных девайсов</h1>
 <hr noshade color="gray" size=5 width=50%>
 <pre align=center><font size=+2 face=candara,calibri>Здравствуйте! Вы попали на сайт, который поможет вам выбрать компьютерные устройства
