--- a/device_select.html
+++ b/device_select.html
@@ -33,7 +33,7 @@
 	alert("Рад вас видеть, "+ nameuser + ".");
 	</script>
 </head>
-<body background="backkw.jpg" link="black" text="black">
+<body background="img/backkw.jpg" link="black" text="black">
 <table align=center border=0 bordercolor=black cellspacing=0 cellpadding=2 width=90% style="border-width: 0px;">
 <tr>
 <td style="background-color:#F08080" width="33%" align=center onclick="window.location.href='device_select.html';"><font color=white size=5 face=calibri>ГЛАВНАЯ</td>
