--- a/mouse.html
+++ b/mouse.html
@@ -35,7 +35,7 @@ body {
 <body background="img/white_mouse.jpg" link="black" text="black">
 <table align=center border=0 bordercolor=black cellspacing=0 cellpadding=2 width=90% style="border-width: 0px;">
 <tr>
-<td style="background-color:#F08080" width="33%" align=center onclick="window.location.href='device_select.html';"><font color=white size=5 face=calibri>ГЛАВНАЯ</td>
+<td style="background-color:#F08080" width="33%" align=center onclick="window.location.href='index.html';"><font color=white size=5 face=calibri>ГЛАВНАЯ</td>
 <td style="background-color:#90EE90" width="100%" class="dropdown">
         <span><font face=calibri color=white size=5>УСТРОЙСТВА</span>
         <div class="dropdown-content">
