--- a/mouse.html
+++ b/mouse.html
@@ -119,7 +119,7 @@ body {
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;мыши с помощью лазерного луча. Лазерные мыши имеют более высокую точность и скорость отслеживания, чем оптические мыши,
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;что делает их идеальными для игр, графического дизайна и других задач, которые требуют быстрого и точного движения мыши.
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Лазерные мыши также могут работать на более широком диапазоне поверхностей, включая гладкие и блестящие.</pre>
-<p align=left><font size=+2 face=calibri><font size=+2 face=calibri>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Для более продвинутых пользователей есть <a href="https://sensor.fyi/sensors/"><i><b>сайт</b></i></a>, на котором представлена сравнительная таблица популярных сенсоров. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Чем выше сенсор в таблице, тем он лучше.</p>
+<p align=left><font size=+2 face=calibri><font size=+2 face=calibri>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Для более продвинутых пользователей есть <a href="https://sensor.fyi/sensors/" target="_blank"><i><b>сайт</b></i></a>, на котором представлена сравнительная таблица популярных сенсоров. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Чем выше сенсор в таблице, тем он лучше.</p>
 <br>
 <br>
 <hr>
